fix: fix #kontakt scroll not working on mobile display and change Do Fizjo to DOFizjo

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -402,6 +402,10 @@ a:hover {
     scroll-margin-top: 200px;
 }
 
+#kontakt-m {
+    scroll-margin-top: 100px;
+}
+
 .contact h1 {
     margin-top: 100px;
 }
